#KT-547: UX - Navbar kosmetik - New navbar design - Fixed bug where datepicker was hidden by navbar

--- a/Tolk.Web/wwwroot/css/site.less
+++ b/Tolk.Web/wwwroot/css/site.less
@@ -102,7 +102,7 @@ hr {
     padding: 10px 20px;
     float: none;
     margin: 0 auto;
-    box-shadow: 1px 1px 3px #888;
+    box-shadow: 1px 2px 4px 0 rgba(0,0,0,0.5);
 }
 
 .select2-container,
@@ -705,4 +705,25 @@ li.placeholder::before {
 .competence-ranking-num {
     font-size: 14pt;
     line-height: 2;
+}
+
+.navbar-default {
+    background-color: white;
+    border: none;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+}
+.navbar-default .navbar-nav > li > a {
+    color: black;
+}
+.navbar-default .navbar-nav > li > a:hover {
+    color: @primary;
+    box-shadow: inset 0 -3px 0 @primary;
+}
+.navbar-default .navbar-nav > li > a:active {
+    color: @primary-darker;
+    box-shadow: inset 0 -3px 0 @primary-darker;
+}
+
+.navbar-default .navbar-brand {
+    color: black;
 }
